@@ -1,0 +1,141 @@
+/**
+ * This program is free software: you can redistribute it and/or modify it under
+ * the terms of the GNU General Public License as published by the Free Software
+ * Foundation, either version 3 of the License, or (at your option) any later
+ * version.
+ *
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+ * details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * this program. If not, see <http://www.gnu.org/licenses/>.package
+ * cloudExplorer
+ *
+ */
+package cloudExplorer;
+
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileReader;
+
+public class CLI_LS {
+
+    BucketClass bucketObject = new BucketClass();
+    String name = null;
+    String Home = System.getProperty("user.home");
+    String s3_config_file = Home + File.separator + "s3.config";
+    BucketClass Bucket = new BucketClass();
+    String[] saved_s3_configs = null;
+    String[] object_array = null;
+    String secret_key = null;
+    String access_key = null;
+    String endpoint = null;
+    String bucket = null;
+    String region = null;
+
+    void messageParser(String message) {
+        System.out.print(message);
+    }
+
+    void mainmenu() {
+
+        for (int i = 0; i != 20; i++) {
+            messageParser("\n");
+        }
+        messageParser("\n------------------------------------------------");
+        messageParser("\n           Cloud Explorer Object List request.");
+        messageParser("\n------------------------------------------------");
+
+    }
+
+    void loadS3credentials() {
+        try {
+            for (String what : saved_s3_configs) {
+                if (what == null) {
+                    messageParser("\nError: an S3 config was null");
+                    System.exit(-1);
+                }
+            }
+
+            access_key = saved_s3_configs[0];
+            secret_key = saved_s3_configs[1];
+            endpoint = saved_s3_configs[2] + ":" + saved_s3_configs[3];
+            region = saved_s3_configs[4];
+        } catch (Exception loadS3Credentials) {
+        }
+    }
+
+    String loadConfig(String what) {
+        String data = null;
+
+        try {
+            FileReader fr = new FileReader(what);
+            BufferedReader bfr = new BufferedReader(fr);
+            String read = null;
+
+            while ((read = bfr.readLine()) != null) {
+                data = data + read;
+            }
+        } catch (Exception loadConfig) {
+        }
+        String remove_null = data.replace("null", "");
+        String remove_symbol = remove_null.replace("@", " ");
+        return remove_symbol;
+    }
+
+    void start(String Abucket) {
+        bucket = Abucket;
+
+        mainmenu();
+
+        try {
+            File s3config = new File(s3_config_file);
+            if (s3config.exists()) {
+            } else {
+                messageParser("\nError: Build config file not found.");
+            }
+
+            saved_s3_configs = loadConfig(this.s3_config_file).toString().split(" ");
+            loadS3credentials();
+
+            if (bucket != null) {
+
+                new Thread(new Runnable() {
+                    public void run() {
+                        ls();
+                    }
+                }).start();
+
+            } else {
+                messageParser("\nError: " + bucket + " does not exist");
+            }
+        } catch (Exception Start) {
+        }
+
+    }
+
+    void ls() {
+        try {
+            System.out.print("\n\nLoading objects for Bucket: " + bucket + "........\n\n");
+
+            String objectlist = bucketObject.listBucketContents(access_key, secret_key, bucket, endpoint);
+            object_array = objectlist.split("@@");
+
+            for (String obj : object_array) {
+                if (obj.contains("null")) {
+
+                } else {
+                    System.out.print("\n" + obj);
+                }
+            }
+
+            System.out.print("\n\n\nBucket listing operation Complete\n\n\n");
+
+        } catch (Exception ls) {
+            System.out.print("\n\nAn Error has occured while listing the objects.\n\n\n");
+            System.exit(-1);
+        }
+    }
+}
